--- a/pong-remix.html
+++ b/pong-remix.html
@@ -89,8 +89,8 @@
         }
     </script>
 </head>
-
 <body>
+<form><input TYPE="button" onClick="history.go(0)" value="Reset"></form>
     <div id="code" class="container-fluid">
         <script src="https://gist-it.appspot.com/github/danielz4861/p5js/blob/master/pong-remix.html?footer=0"></script>
     </div>
@@ -102,7 +102,5 @@
         });
     </script>
 </body>
-
-
 </html>
     
