--- a/Objects-Final-Project.html
+++ b/Objects-Final-Project.html
@@ -89,7 +89,8 @@
                 fill("Black");
                 stroke("Black");
             }
-            else return false;
+            else{
+                return false;
         }
     </script>
 </head>
