--- a/Objects-Final-Project.html
+++ b/Objects-Final-Project.html
@@ -89,8 +89,7 @@
                 fill("Black");
                 stroke("Black");
             }
-            else{
-                return false;
+            return false;{
         }
     </script>
 </head>
