--- a/Objects-Final-Project.html
+++ b/Objects-Final-Project.html
@@ -88,6 +88,8 @@
             else if (keyCode === 54) {  // "6" key will makes the text and circles black 
                 fill("Black");
                 stroke("Black");
+            }
+            else return false;
         }
     </script>
 </head>
